--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,3 +4,28 @@
     display: block;
     clear: both;
 }
+
+.nav {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+}
+
+.navli {
+    float: left;
+}
+
+.navli a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+.navli a:hover {
+    background-color: #111;
+}
