--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,16 +10,16 @@
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background-color: #333;
+    background-color: #ffffff;
 }
 
 .navli {
-    float: left;
+    float: right;
 }
 
 .navli a {
     display: block;
-    color: white;
+    color: #666666;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -27,13 +27,16 @@
 
 /* Change the link color to #111 (black) on hover */
 .navli a:hover {
-    background-color: #111;
+    background-color: #e2deded3;
 }
 
 header {
-    background-color: #ffffff;
+    padding: 14px 16px;
+    text-align: center;
+    float: left;
+    background-color: #4aaaa5;
     border-color: #cccccc;
-    color: #4aaaa5
+    color: #ffffff
 
 } 
 
@@ -44,8 +47,8 @@ footer {
 
 h1, h2, h3 {
     font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: #4aaaa5;
-    color: #777777
+    background-color: #ffffff;
+    color: #4aaaa5
 
 }
 
