--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,11 +72,12 @@ p {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #ffffff;
     border-color: #dddddd;
-    float: left;
 }
 
 img {
     float: left;
+    margin-right: 25px;
+
 }
 
 section {
@@ -88,4 +89,15 @@ section {
 
 body {
     background-image: url("../images/tic-tac-toe.png")
+}
+
+.wrap {
+    border: 1px solid #666666;
+    margin: 20px;
+    padding: 10px;
+    width: 90%;
+    overflow: auto;
+    background-color: #ffffff;
+
+
 }
