--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,6 +26,7 @@ html, body {
     padding: 0;
     overflow: hidden;
     background-color: #ffffff;
+
 }
 
 .navli {
@@ -93,11 +94,20 @@ body {
 
 .wrap {
     border: 1px solid #666666;
-    margin: 20px;
+    margin: 15px;
     padding: 10px;
     width: 90%;
     overflow: auto;
     background-color: #ffffff;
 
+
+}
+
+#commentbox {
+    font-size: 12pt;
+}
+
+#submitbutton {
+    clear:both;
 
 }
