--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
-
-.clearfix ::after {
-    content: "";
-    display: block;
-    clear: both;
-}
-
 html, body {
     height: 100%;
     margin: 0;
@@ -37,7 +30,7 @@ html, body {
     display: block;
     color: #666666;
     text-align: center;
-    padding: 14px 16px;
+    padding: 16px 16px;
     text-decoration: none;
 }
 
@@ -47,6 +40,7 @@ html, body {
 }
 
 header {
+    font-size: 18pt;
     padding: 14px 16px;
     text-align: center;
     float: left;
@@ -75,17 +69,34 @@ p {
     border-color: #dddddd;
 }
 
+#text {
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: #ffffff;
+    border-color: #dddddd;
+}
+
 img {
     float: left;
     margin-right: 25px;
+    overflow: auto;
+
+}
+
+.portfolio {
+    float: left;
+    width: 250px;
+    height: 250px;
+    margin-right: 25px;
+    overflow: auto;
 
 }
 
 section {
+    font-size:14pt;
     background: #ccc;
-    border-bottom: 1px solid #666666;
+    border-bottom: 1px solid #cccccc;
     width: 100%;
-    margin: 0
+    overflow: auto;
   }
 
 body {
@@ -93,13 +104,18 @@ body {
 }
 
 .wrap {
-    border: 1px solid #666666;
-    margin: 15px;
+    border: 1px solid #ccc;
+    margin: 25px;
     padding: 10px;
     width: 90%;
     overflow: auto;
     background-color: #ffffff;
+}
 
+.titleheader {
+    padding: 10px 12px;
+    border-bottom: 1px solid #ccc;
+    border-width: 80%;
 
 }
 
@@ -110,4 +126,10 @@ body {
 #submitbutton {
     clear:both;
 
+}
+
+.clearfix ::after {
+    content: "";
+    display: block;
+    clear: both;
 }
