--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,13 +92,26 @@ img {
 
 }
 
+#ulportfolio {
+    width:45%;
+    padding:1em;
+    margin:0 auto;
+    columns: 2;
+    -webkit-columns: 2;
+    -moz-columns: 2;
+}
+
 .liportfolio {
-    display:block;
     list-style-type: none;
     display: inline;
     vertical-align: bottom;
 
 }
+
+li:nth-child(even){
+    margin-right:0;
+}
+
 
 section {
     font-size:14pt;
