--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,16 +84,10 @@ img {
 }
 
 .portfolio {
-    float: left;
-    margin-right: 25px;
-    margin-bottom:25px;
-    width:auto;
-    height:auto;
 
 }
 
 #ulportfolio {
-    width:45%;
     padding:1em;
     margin:0 auto;
     columns: 2;
@@ -103,8 +97,8 @@ img {
 
 .liportfolio {
     list-style-type: none;
-    display: inline;
-    vertical-align: bottom;
+    padding: 25px;
+    overflow:auto;
 
 }
 
@@ -127,9 +121,9 @@ body {
 
 .wrap {
     border: 1px solid #ccc;
-    margin: 25px;
+    margin: 25px auto;
     padding: 10px;
-    width: 90%;
+    width: 960px;
     overflow: auto;
     background-color: #ffffff;
 }
