--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,10 +83,6 @@ img {
 
 }
 
-.portfolio {
-
-}
-
 #ulportfolio {
     padding:1em;
     margin:0 auto;
@@ -102,10 +98,28 @@ img {
 
 }
 
-li:nth-child(even){
-    margin-right:0;
+.imagecontainer {
+    position: relative;
+    text-align: center;
+    color: #cccccc;
+    width: 100%;
+    font-size: 12pt;
 }
 
+.imagetitle {
+    position: absolute;
+    width:100%;
+    right: 40px;
+}
+
+span {   
+    color: white; 
+    font: bold 24px/45px Helvetica, Sans-Serif; 
+    letter-spacing: -1px;  
+    background: rgb(0, 0, 0); /* fallback color */
+    background: rgba(0, 0, 0, 0.7);
+
+}
 
 section {
     font-size:14pt;
