--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,6 @@ html, body {
     min-height: 100%;
   }
   .content-inside {
-    padding: 20px;
     padding-bottom: 50px;
   }
   .footer {
@@ -156,7 +155,8 @@ body {
     border: 1px solid #ccc;
     margin: 25px auto;
     width: 920px;
-    padding: 20px;
+    padding-left: 20px;
+    padding-bottom: 20px;
     overflow: auto;
     background-color: #ffffff;
 }
