--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,8 +155,7 @@ body {
     border: 1px solid #ccc;
     margin: 25px auto;
     width: 920px;
-    padding-left: 20px;
-    padding-bottom: 20px;
+    padding: 0px 20px 20px 20px;
     overflow: auto;
     background-color: #ffffff;
 }
